fix(docs): open api y fix de errores
